--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -11,5 +11,14 @@
             "matches": ["https://starlog.gg/en/leaderboard*"],
             "js": ["snitch.js"]
         }
-    ]
+    ],
+    "icons": {
+        "16": "icons/icon-16.png",
+        "19": "icons/icon-19.png",
+        "38": "icons/icon-38.png",
+        "48": "icons/icon-48.png",
+        "128": "icons/icon-128.png",
+        "256": "icons/icon-256.png",
+        "512": "icons/icon-512.png"
+    }
 }
