--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -1,6 +1,6 @@
 {
     "name": "ProSnitch",
-    "version": "1.0",
+    "version": "1.1",
     "description": "Chrome Extension to reveal progamer aliases in the starlog.gg Leaderboard",
     "manifest_version": 2,
     "permissions": [
@@ -13,12 +13,12 @@
         }
     ],
     "icons": {
-        "16": "icons/icon-16.png",
-        "19": "icons/icon-19.png",
-        "38": "icons/icon-38.png",
-        "48": "icons/icon-48.png",
-        "128": "icons/icon-128.png",
-        "256": "icons/icon-256.png",
-        "512": "icons/icon-512.png"
+        "16": "icon-16.png",
+        "19": "icon-19.png",
+        "38": "icon-38.png",
+        "48": "icon-48.png",
+        "128": "icon-128.png",
+        "256": "icon-256.png",
+        "512": "icon-512.png"
     }
 }
